force-app/main/default/objects/Contact/fields/Nav_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Nav_Contact_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Nav Contact Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>