force-app/main/default/objects/Contact/fields/OA_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>OA_Last_Activity__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity</label>
    <type>Date</type>
</CustomField>